# demo-rt-app-snap

./: .gitignore  CMakeLists.txt  README.md
snap/: snapcraft.yaml
